--- a/package.json
+++ b/package.json
@@ -9,23 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.5.0",
+    "@hookform/resolvers": "^3.6.0",
+    "@prisma/client": "^5.15.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-switch": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-select": "^5.8.0",
     "react-textarea-autosize": "^8.5.3",
-    "vaul": "^0.9.1"
+    "resend": "^3.3.0",
+    "uuid": "^10.0.0",
+    "vaul": "^0.9.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
+    "prisma": "^5.15.1",
     "typescript": "^5"
   }
 }
